Provide data using Duckdb-WASM

--- a/docs/adr/0003-データ形式の選択.md
+++ b/docs/adr/0003-データ形式の選択.md
@@ -9,17 +9,20 @@ Accepted
 現時点では、データは全件取得しても数 MB 程度に収まる見込み。
 ストレージ効率と読み込み速度はなるべく高めておきたい。
 SQL クエリを実行する必要がある。
+R や Python のユーザーにデータベースについても知ってほしいという教育目的がある。
 
 ## Decision
 
-Parquet 形式を選択する
+Parquet 形式を選択する。R や Python からは DuckDB を使用して Parquet ファイルにアクセスする。
 
 ## Consequences
 
 - **メリット**
   - 列指向フォーマットで効率的な圧縮
-  - DuckDB-WASM との親和性が高い
+  - DuckDB との親和性が高い（DuckDB は Parquet ファイルを直接読み込める）
   - 高速な読み込みが可能
+  - R や Python から DuckDB を使って SQL クエリでアクセスできる
+  - ユーザーが SQL クライアントライブラリの使い方を学べる
 - **デメリット**
-  - R や Python から読み込む場合は、arrow や pandas などのライブラリが必要
-    - DuckDB-WASM の場合は組み込み機能で直接読み込めるため、追加のライブラリは不要
+  - R や Python からアクセスする場合は、duckdb パッケージが必要
+  - DuckDB-WASM の場合は組み込み機能で直接読み込めるため、追加のライブラリは不要
